# memkv

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  dpkg.sh
.github/workflows/: libmemkv.yml
cmake/: MemkvConfig.cmake.in  PackageMemkv.cmake
debian/: changelog  control  copyright  libmemkv-dev.install  libmemkv.install  rules
include/: memkv.h
include/memkv/: memkv.h  miaobyte.h
src/: logutil.h  memkv.c  memkv_common.h  miaobyte.c  miaobytecli.c
test/: 1_initgetset.c  2_memcap.c  CMakeLists.txt  triekv.c
